# artfornormies

./: LICENSE  README.md  pyproject.toml  setup.cfg
artfornormies/: functions.py  object_graphs.py
