

[metadata]
name = artfornormies
version = 0.0.1
author = Jonathan Chan
author_email = jonathan.chan41@gmail.com
description = For generating personal reminders as data visualizations (venn, bar, heatmap, scatter, etc)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamescalam/artfornormies
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True